--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <img src="assets/images/dp_male.jpg" alt="" class="rounded-circle" height="200" width="200">
                 </div>
                 <br/>
-                <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="student, Full stack Web Developer, Open Source"></span>
+                <span style="display: inline;">I am <span class="animated-text"
+                    data-words="a student, into Front end Web Developer, into Open Source"></span>
                 </span>
                 <div>
                     <div class="social-icons">
